--- a/consul/api-gateway/consul-api-gateway.yaml
+++ b/consul/api-gateway/consul-api-gateway.yaml
@@ -14,6 +14,7 @@ spec:
         namespaces:
           from: All
       tls:
+        mode: Terminate
         certificateRefs:
           - kind: Secret
             group: ""
