Add finalizer for cascading delete

--- a/argocd/applications/consul/application.yaml
+++ b/argocd/applications/consul/application.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: consul-config
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   syncPolicy:
     automated:
