--- a/argocd/applications/terraform-operator/application.yaml
+++ b/argocd/applications/terraform-operator/application.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: terraform-cloud-operator
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   syncPolicy:
     automated:
