Disable Consul telemetry and toggle off application variables

--- a/application/promotions/database-secrets.yaml
+++ b/application/promotions/database-secrets.yaml
@@ -3,13 +3,13 @@ kind: VaultAuth
 metadata:
   name: promotions
   annotations:
-    argocd.argoproj.io/sync-wave: "2"
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   method: kubernetes
   mount: kubernetes
   namespace: admin
   kubernetes:
-    role: terraform-cloud-operator
+    role: test
     serviceAccount: promotions
     audiences:
       - vault
@@ -19,12 +19,12 @@ kind: VaultStaticSecret
 metadata:
   name: database-module-variables
   annotations:
-    argocd.argoproj.io/sync-wave: "3"
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   role: terraform-cloud-operator
   mount: tfc/operator
   destination:
     create: true
-    name: tfc-module-variables-database
+    name: database-module-variables
     type: "Opaque"
   vaultAuthRef: promotions
