--- a/application/promotions/database.yaml
+++ b/application/promotions/database.yaml
@@ -1,58 +1,77 @@
----
-
----
-apiVersion: app.terraform.io/v1alpha2
-kind: Workspace
-metadata:
-  name: database
-spec:
-  organization: hashicorp-stack-demoapp
-  token:
-    secretKeyRef:
-      name: terraform-cloud
-      key: token
-  name: database
-  description: Workspace for database automated via TFC Operator
-  applyMethod: auto
-  terraformVersion: 1.5.6
-  terraformVariables:
-    - name: business_unit
-      value: hashicups
-    - name: environment
-      value: production
-    - name: db_name
-      value: test
-    - name: boundary_scope_id
-      value: p_bbROi3o9uU
-  environmentVariables:
-    - name: CONFIRM_DESTROY
-      sensitive: false
-      value: "1"
-  executionMode: remote
----
-apiVersion: app.terraform.io/v1alpha2
-kind: Module
-metadata:
-  name: database
-spec:
-  organization: hashicorp-stack-demoapp
-  token:
-    secretKeyRef:
-      name: terraform-cloud
-      key: token
-  destroyOnDeletion: true
-  module:
-    source:  "app.terraform.io/hashicorp-stack-demoapp/postgres/aws"
-    version: "0.0.1"
-  outputs:
-    - name: product_database_address
-    - name: database_static_path
-    - name: database_secret_name
-    - name: boundary_target_postgres
-  variables:
-    - name: business_unit
-    - name: environment
-    - name: db_name
-    - name: boundary_scope_id
-  workspace:
-    name: database
+# ---
+# apiVersion: app.terraform.io/v1alpha2
+# kind: Workspace
+# metadata:
+#   name: database
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "1"
+# spec:
+#   organization: hashicorp-stack-demoapp
+#   token:
+#     secretKeyRef:
+#       name: terraform-cloud
+#       key: token
+#   name: database
+#   description: Workspace for database automated via TFC Operator
+#   applyMethod: auto
+#   terraformVersion: 1.5.6
+#   terraformVariables:
+#     - name: business_unit
+#       value: hashicups
+#     - name: environment
+#       value: production
+#     - name: db_name
+#       value: test
+#     - name: boundary_scope_id
+#       value: p_bbROi3o9uU
+#     - name: name
+#       value: hashicups
+#     - name: boundary_address
+#       valueFrom:
+#         secretKeyRef:
+#           name: database-module-variables
+#           key: boundary_address
+#     - name: boundary_username
+#       valueFrom:
+#         secretKeyRef:
+#           name: database-module-variables
+#           key: boundary_username
+#     - name: boundary_password
+#       valueFrom:
+#         secretKeyRef:
+#           name: database-module-variables
+#           key: boundary_password
+#   environmentVariables:
+#     - name: CONFIRM_DESTROY
+#       sensitive: false
+#       value: "1"
+#   executionMode: remote
+# ---
+# apiVersion: app.terraform.io/v1alpha2
+# kind: Module
+# metadata:
+#   name: database
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "2"
+# spec:
+#   organization: hashicorp-stack-demoapp
+#   token:
+#     secretKeyRef:
+#       name: terraform-cloud
+#       key: token
+#   destroyOnDeletion: true
+#   module:
+#     source:  "app.terraform.io/hashicorp-stack-demoapp/postgres/aws"
+#     version: "0.0.1"
+#   outputs:
+#     - name: product_database_address
+#     - name: database_static_path
+#     - name: database_secret_name
+#     - name: boundary_target_postgres
+#   variables:
+#     - name: business_unit
+#     - name: environment
+#     - name: db_name
+#     - name: boundary_scope_id
+#   workspace:
+#     name: database
