Initial testing of getting secrets for operator

--- a/application/promotions/database-secrets.yaml
+++ b/application/promotions/database-secrets.yaml
@@ -23,6 +23,7 @@ metadata:
 spec:
   role: terraform-cloud-operator
   mount: tfc/operator
+  path: terraform-aws-postgres
   destination:
     create: true
     name: database-module-variables
