Fix Vault Auth for promotions

--- a/application/promotions/terraform-cloud.yaml
+++ b/application/promotions/terraform-cloud.yaml
@@ -27,38 +27,38 @@ spec:
   mount: kubernetes
   namespace: admin
   kubernetes:
-    role: terraform-cloud-operator
+    role: promotions
     serviceAccount: terraform-cloud
     audiences:
       - vault
----
-apiVersion: secrets.hashicorp.com/v1beta1
-kind: VaultDynamicSecret
-metadata:
-  name: terraform-cloud
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
-spec:
-  mount: terraform
-  path: creds/promotions
-  destination:
-    create: true
-    name: terraform-cloud
-    type: Opaque
-  vaultAuthRef: terraform-cloud
----
-apiVersion: secrets.hashicorp.com/v1beta1
-kind: VaultStaticSecret
-metadata:
-  name: database-module-variables
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
-spec:
-  role: terraform-cloud-operator
-  mount: tfc/operator
-  path: terraform-aws-postgres
-  destination:
-    create: true
-    name: database-module-variables
-    type: "Opaque"
-  vaultAuthRef: promotions
+# ---
+# apiVersion: secrets.hashicorp.com/v1beta1
+# kind: VaultDynamicSecret
+# metadata:
+#   name: terraform-cloud
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "2"
+# spec:
+#   mount: terraform
+#   path: creds/promotions
+#   destination:
+#     create: true
+#     name: terraform-cloud
+#     type: Opaque
+#   vaultAuthRef: terraform-cloud
+# ---
+# apiVersion: secrets.hashicorp.com/v1beta1
+# kind: VaultStaticSecret
+# metadata:
+#   name: database-module-variables
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "2"
+# spec:
+#   role: terraform-cloud-operator
+#   mount: tfc/operator
+#   path: terraform-aws-postgres
+#   destination:
+#     create: true
+#     name: database-module-variables
+#     type: "Opaque"
+#   vaultAuthRef: promotions
