Add VaultStaticSecret for module variables

--- a/application/promotions/terraform-cloud.yaml
+++ b/application/promotions/terraform-cloud.yaml
@@ -43,22 +43,23 @@ spec:
   path: creds/promotions
   destination:
     create: true
-    name: terraform-cloud
+    name: terraform-cloud-team-token
     type: Opaque
   vaultAuthRef: terraform-cloud
-# ---
-# apiVersion: secrets.hashicorp.com/v1beta1
-# kind: VaultStaticSecret
-# metadata:
-#   name: database-module-variables
-#   annotations:
-#     argocd.argoproj.io/sync-wave: "2"
-# spec:
-#   role: terraform-cloud-operator
-#   mount: tfc/operator
-#   path: terraform-aws-postgres
-#   destination:
-#     create: true
-#     name: database-module-variables
-#     type: "Opaque"
-#   vaultAuthRef: promotions
+---
+apiVersion: secrets.hashicorp.com/v1beta1
+kind: VaultStaticSecret
+metadata:
+  name: database-module-variables
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
+spec:
+  role: terraform-cloud-operator
+  mount: terraform-cloud-operator/promotions
+  type: kv-v2
+  path: terraform-aws-postgres
+  destination:
+    create: true
+    name: terraform-aws-postgres-variables
+    type: Opaque
+  vaultAuthRef: terraform-cloud
