--- a/application/promotions/database.yaml
+++ b/application/promotions/database.yaml
@@ -24,8 +24,6 @@ spec:
       value: test
     - name: boundary_scope_id
       value: p_93cKyO0Yiw
-    - name: name
-      value: hashicups
     - name: boundary_address
       valueFrom:
         secretKeyRef:
@@ -82,42 +80,41 @@ spec:
   tags:
     - promotions
     - application
-# ---
-# apiVersion: app.terraform.io/v1alpha2
-# kind: Module
-# metadata:
-#   name: database
-#   annotations:
-#     argocd.argoproj.io/sync-wave: "2"
-# spec:
-#   organization: hashicorp-stack-demoapp
-#   token:
-#     secretKeyRef:
-#       name: terraform-cloud
-#       key: token
-#   destroyOnDeletion: true
-#   module:
-#     source:  "app.terraform.io/hashicorp-stack-demoapp/postgres/aws"
-#     version: "0.0.1"
-#   variables:
-#     - name: name
-#     - name: business_unit
-#     - name: environment
-#     - name: db_name
-#     - name: boundary_scope_id
-#     - name: boundary_address
-#     - name: boundary_username
-#     - name: boundary_password
-#     - name: consul_address
-#     - name: consul_token
-#     - name: consul_datacenter
-#     - name: vault_address
-#     - name: vault_token
-#     - name: vault_namespace
-#   outputs:
-#     - name: product_database_address
-#     - name: database_static_path
-#     - name: database_secret_name
-#     - name: boundary_target_postgres
-#   workspace:
-#     name: database
+---
+apiVersion: app.terraform.io/v1alpha2
+kind: Module
+metadata:
+  name: database
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
+spec:
+  organization: hashicorp-stack-demoapp
+  token:
+    secretKeyRef:
+      name: terraform-cloud-team-token
+      key: token
+  destroyOnDeletion: true
+  module:
+    source:  "app.terraform.io/hashicorp-stack-demoapp/postgres/aws"
+    version: "0.0.1"
+  variables:
+    - name: business_unit
+    - name: environment
+    - name: db_name
+    - name: boundary_scope_id
+    - name: boundary_address
+    - name: boundary_username
+    - name: boundary_password
+    - name: consul_address
+    - name: consul_token
+    - name: consul_datacenter
+    - name: vault_address
+    - name: vault_token
+    - name: vault_namespace
+  outputs:
+    - name: product_database_address
+    - name: database_static_path
+    - name: database_secret_name
+    - name: boundary_target_postgres
+  workspace:
+    name: promotions-database
