--- a/application/promotions/database.yaml
+++ b/application/promotions/database.yaml
@@ -16,8 +16,10 @@ spec:
   applyMethod: auto
   terraformVersion: 1.5.6
   terraformVariables:
-    - name: business_unit
+    - name: org_name
       value: hashicups
+    - name: business_unit
+      value: promotions
     - name: environment
       value: production
     - name: db_name
@@ -98,6 +100,7 @@ spec:
     source:  "app.terraform.io/hashicorp-stack-demoapp/postgres/aws"
     version: "0.0.1"
   variables:
+    - name: org_name
     - name: business_unit
     - name: environment
     - name: db_name
