Make database services clear for terminating gateway

--- a/consul/defaults/terminating-gateway.yaml
+++ b/consul/defaults/terminating-gateway.yaml
@@ -4,4 +4,5 @@ metadata:
   name: terminating-gateway
 spec:
   services:
-    - name: "*-database"
+    - name: "promotions-database"
+    - name: "hashicups-database"
