--- a/application/payments-app/payments-processor.yaml
+++ b/application/payments-app/payments-processor.yaml
@@ -37,7 +37,7 @@ metadata:
 spec:
   mount: payments-processor/static
   type: kv-v2
-  path: crds
+  path: creds
   destination:
     create: true
     name: payments-processor
