Add payments-processor to service mesh

--- a/application/payments-app/payments-processor.yaml
+++ b/application/payments-app/payments-processor.yaml
@@ -80,6 +80,8 @@ spec:
       labels:
         service: payments-processor
         app: payments-processor
+      annotations:
+        "consul.hashicorp.com/connect-inject": "true"
     spec:
       containers:
         - name: payments-processor
