Add payments-app-database to terminating gateway

--- a/consul/defaults/terminating-gateway.yaml
+++ b/consul/defaults/terminating-gateway.yaml
@@ -4,5 +4,4 @@ metadata:
   name: terminating-gateway
 spec:
   services:
-    - name: "promotions-database"
-    - name: "hashicups-database"
+    - name: "payments-app-database"
