--- a/application/payments-app/payments-processor.yaml
+++ b/application/payments-app/payments-processor.yaml
@@ -83,9 +83,17 @@ spec:
       annotations:
         "consul.hashicorp.com/connect-inject": "true"
     spec:
+      serviceAccountName: payments-processor
       containers:
         - name: payments-processor
           image: rosemarywang/payments-processor
+          imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 3
+            periodSeconds: 3
           ports:
             - containerPort: 8080
           env:
