--- a/application/hashicups/product-api.yaml
+++ b/application/hashicups/product-api.yaml
@@ -16,7 +16,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: product
-automountServiceAccountToken: true
+---
+apiVersion: v1
+kind: Secret
+type: kubernetes.io/service-account-token
+metadata:
+  name: product
+  annotations:
+    kubernetes.io/service-account.name: "product"
 ---
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceDefaults
@@ -31,7 +38,8 @@ metadata:
   name: product
   labels:
     app: product
-    tags.datadoghq.com/service: product
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   replicas: 1
   selector:
@@ -41,28 +49,20 @@ spec:
     metadata:
       labels:
         app: product
-        tags.datadoghq.com/service: product
       annotations:
-        admission.datadoghq.com/enabled: "true"
-        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
-        ad.datadoghq.com/envoy-sidecar.checks: |
-          {
-            "envoy": {
-              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
-            }
-          }
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "database:5432"
-        consul.hashicorp.com/transparent-proxy: "false"
+        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "8200"
+
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "product"
+        vault.hashicorp.com/role: "products"
         vault.hashicorp.com/namespace: "admin"
-        vault.hashicorp.com/agent-inject-secret-conf.json: "database/product/creds/product"
+        vault.hashicorp.com/agent-inject-secret-conf.json: "hashicups/database/creds/products"
         vault.hashicorp.com/agent-inject-template-conf.json: |
           {
             "bind_address": ":9090",
             "metrics_address": ":9103",
-            {{ with secret "database/product/creds/product" -}}
+            {{ with secret "hashicups/database/creds/products" -}}
             "db_connection": "host=127.0.0.1 port=5432 user={{ .Data.username }} password={{ .Data.password }} dbname=products sslmode=disable"
             {{- end }}
           }
@@ -75,18 +75,6 @@ spec:
             - containerPort: 9090
             - containerPort: 9103
           env:
-            - name: DD_SERVICE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.labels['tags.datadoghq.com/service']
-            - name: DD_AGENT_HOST
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.hostIP
-            - name: HOST_IP
-              valueFrom:
-                  fieldRef:
-                      fieldPath: status.hostIP
             - name: "CONFIG_FILE"
               value: "/vault/secrets/conf.json"
           livenessProbe:
