--- a/application/hashicups/intentions.yaml
+++ b/application/hashicups/intentions.yaml
@@ -46,10 +46,10 @@ spec:
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceIntentions
 metadata:
-  name: database
+  name: hashicups-database
 spec:
   destination:
-    name: database
+    name: hashicups-database
   sources:
     - name: product
       action: allow
