Update refresh rate of secret

--- a/application/payments-app/payments-processor-secrets.yaml
+++ b/application/payments-app/payments-processor-secrets.yaml
@@ -30,7 +30,7 @@ spec:
     name: payments-processor-creds
     type: Opaque
   vaultAuthRef: payments-processor
-  refreshAfter: 24h
+  refreshAfter: 1m
   rolloutRestartTargets:
     - kind: Deployment
       name: payments-processor
