Add NodePort to payment processor

--- a/application/payments-app/payments-processor.yaml
+++ b/application/payments-app/payments-processor.yaml
@@ -26,9 +26,11 @@ metadata:
   labels:
     app: payments-processor
 spec:
+  type: NodePort
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 31280
   selector:
     app: payments-processor
 ---
