--- a/application/payments-app/database.yaml
+++ b/application/payments-app/database.yaml
@@ -1,5 +1,21 @@
 ---
 apiVersion: app.terraform.io/v1alpha2
+kind: Project
+metadata:
+  name: payments-app
+spec:
+  organization: hashicorp-stack-demoapp
+  token:
+    secretKeyRef:
+      name: terraform-cloud-team-token
+      key: token
+  name: payments-app
+  teamAccess:
+  - team:
+      name: payments-app
+    access: admin
+---
+apiVersion: app.terraform.io/v1alpha2
 kind: Workspace
 metadata:
   name: payments-app-database
@@ -7,6 +23,8 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
 spec:
   organization: hashicorp-stack-demoapp
+  project:
+    name: payments-app
   token:
     secretKeyRef:
       name: terraform-cloud-team-token
